save before relations creation

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "authors": [
         {
             "name": "Birolini Hervé",
-            "email": "Birolini.Herve@gmail.com"
+            "email": "twowheelsformotion@outlook.fr"
         }
     ],
     "type": "project",
