user fully managed

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,9 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
+    # BIROLINI : Déclaration du chemin complet correspondant à ASSET (Twig)
+    # ( appel : $this->getParameter('asset_path') )
+    asset_path: '%kernel.project_dir%/public/build/'
 
 services:
     # default configuration for services in *this* file
