--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -24,7 +24,7 @@ security:
             logout:
                 # path: homepage
                 path: app_logout
-                # where to redirect after logout
+                # where to redirect after logout (BIROLINI)
                 target: homepage
 
             # activate different ways to authenticate
