Flatrates managing (CRUD)

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "herve-birolini/2wheels4motion",
-    "description": "Centrale d'appels taxi-moto ind\u0000pendants",
+    "description": "Annuaire des taxi-moto ind\u0000pendants de France",
     "authors": [
         {
             "name": "Birolini Hervé",
