--- a/config/services.yaml
+++ b/config/services.yaml
@@ -8,6 +8,9 @@ parameters:
     # ( appel : $this->getParameter('asset_path') )
     asset_path_dev: '%kernel.project_dir%/assets/'
     asset_path_prod: '%kernel.project_dir%/public/build/'
+    # Impossible car erreur à cause du 1er @...
+    # pattern_road: "@[a-zA-Z\'àáâãäåçèéêëìíîïðòóôõöùúûüýÿ \d-]@ig"
+    # pattern_city: "@[a-zA-Z\'àáâãäåçèéêëìíîïðòóôõöùúûüýÿ -]@ig"
 
 services:
     # default configuration for services in *this* file
